--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,17 +139,11 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ35gtT3VCHT4OXBV4IdnSJAZ1nsuBmoEUR9Rx4MAu2ttk' },
-                { date: '2024-09-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSFQRBjVX6ZR6Wh1EO2X6MdAc5u_CAdrvQ9AKA6hkszTsk' },
-                { date: '2024-10-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRRS6S17na6RrF6WKFXHyWDAaGTTrboXClI2JP7akObL0M' },
-                { date: '2024-10-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQF6tjm4vX6ToFt-oJRPtpKAVv4NxNxD2tybew7GBirSsw' },
-                { date: '2024-10-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTKpc1ei3ALTrANj7hi22BrAXrwhVplEBeE_35WMZ92eQ0' },
-                { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQThASRbp00nSaofqGzBbwlSAchHK0UgdngCjharxZ0LVO4' },
-                { date: '2024-10-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR63JUTVQD8TJdnkDqaCU8zAeVHOVT8I1G5cxyjlFzLo0c' },
-                { date: '2024-10-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQY0_jp_Ko2T7cyDnSoWC5BAVpxoq48DaKIM52ee4jBaiQ' },
-                { date: '2024-10-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQHO2j1y9BbT4ESvQY21-LjAfa70l1lci4T_0D1GXfFt-Y' },
-                { date: '2024-10-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTZ7hunzTMZQqjA5Xi23_0bAXxvfHnqT1gJt38PNr2pamc' },
-                { date: '2024-10-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTHbmXTAjuJQ5ddcnpWAdS2AV-IdxhJPcBxo067QIjlT3w' }                       
+                { date: '2024-10-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTHbmXTAjuJQ5ddcnpWAdS2AV-IdxhJPcBxo067QIjlT3w' },
+                { date: '2024-10-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQScHX0m9XBvQZMtX0dfB3dJAa6u5YNuPk1MQIiTZzluWMY' },
+                { date: '2024-10-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoc8RAjNiXQYnxuGGBEFLNAVIe1noCQO6pbxm1BEkusgo' },
+                { date: '2024-10-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRNaVDCcNJCTZ08uknbzMBRAeZJyWjOO6CxNErI1rPzirU' },
+                { date: '2024-10-13', time: '06:59', url: 'n/a' }                     
               ];
       
               function updateIframeSrc() {
