--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -139,17 +139,11 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-09-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR4_-_L-HyzT4IMgQUyb-kyAbtfopVq9ufU9UtDkVMyfvg' },
-                { date: '2024-09-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQPY3x4W-DUQaWy6O-5EP_AAT_b4zCIEIXdhXsMVvl1veo' },
-                { date: '2024-10-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYBkecfXqSQ5XYIE3m0YYYAWBFhx5y8HShzKCOjrjNyeY' },
-                { date: '2024-10-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSG3YGloPcmRru7jmMdOMFJAbFuJgMFoiEe9vXlpFZiKmc' },
-                { date: '2024-10-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS-CJMmYhGJR4JBWVStKJx4AZImWwAQfGEy0g4TrrdUXrk' },
-                { date: '2024-10-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRr42UeL6epT4H2f0TOB3bOAbdkxgbKhev4o8qNCQ3QZbY' },
-                { date: '2024-10-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRau3wQDdcaRJ4bnkDqMAysAYHZY6_oenoJvkEs-SktyEQ' },
-                { date: '2024-10-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQW22H3mwVbSKm4jco7cKyRAaEJ7yhUqUasthYFvORuCaE' },
-                { date: '2024-10-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtKTcq2V7HQ6Nq5sOb4Xf-ASK79FuYYY7GMKQSnuhgtkY' },
-                { date: '2024-10-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTADYTFeUptQ683VQZyygktATcly3KIH-ASS4OToVzRxhQ' },
-                { date: '2024-10-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS8HAAlp9csTYF3DT7gBJimAS1cVI0rifGB2Rph7GYEy4I' }      
+                { date: '2024-10-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS8HAAlp9csTYF3DT7gBJimAS1cVI0rifGB2Rph7GYEy4I' },
+                { date: '2024-10-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTzaww5DCGkQYI2q3TgJVMxActvEhRe5frbSci4koHzXL0' },
+                { date: '2024-10-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRsL3-WzYczTa8yrMRk4DRcAYjlMUQ6nDIcFOah8EuW23w' },
+                { date: '2024-10-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRfozH8nmcdT6YPCr8D3ASIARn4ee0cHgxlid0_M54mxuo' },
+                { date: '2024-10-13', time: '06:59', url: 'n/a' }      
               ];
       
 function updateIframeSrc() {
