--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,11 +139,15 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-10-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTHbmXTAjuJQ5ddcnpWAdS2AV-IdxhJPcBxo067QIjlT3w' },
-                { date: '2024-10-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQScHX0m9XBvQZMtX0dfB3dJAa6u5YNuPk1MQIiTZzluWMY' },
-                { date: '2024-10-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoc8RAjNiXQYnxuGGBEFLNAVIe1noCQO6pbxm1BEkusgo' },
-                { date: '2024-10-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRNaVDCcNJCTZ08uknbzMBRAeZJyWjOO6CxNErI1rPzirU' },
-                { date: '2024-10-13', time: '06:59', url: 'n/a' }                     
+                { date: '2024-10-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTUX6G1Uee-RIHLPdHbPYFXActrK_ZKm_fL5NYvr_kJFOg' },
+                { date: '2024-10-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTNFIMbDxsGSJoyhZ629yBtAZvmQQqWidMHD0gSHZp5Jl0' },
+                { date: '2024-10-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTvsZxHJgmmSrv_McmIjeEIAfIisWeK45luEpgwt7ZtnY8' },
+                { date: '2024-10-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTeRvxCUyIrTKzrNAhi8CzZAS0tCt5PQ0wfysTXRr-4-C0' },
+                { date: '2024-10-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrfFF5i8LtQZWx6ylxK_LmAQsKqb8ppMv2LCtyDpu1sF4' },
+                { date: '2024-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSbVwBd12qZTaGLQ92PpM_bAWA_TGyFB1SpQlb8OpLth-s' },
+                { date: '2024-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYh3UXkBmTSJr2UK74LABoAanSTVL_hcvrOiu-L4fNfd8' },
+                { date: '2024-10-21', time: '06:59', url: 'n/a' },
+                { date: '2024-10-22', time: '06:59', url: 'n/a' }                     
               ];
       
               function updateIframeSrc() {
