--- a/year8-today.html
+++ b/year8-today.html
@@ -139,11 +139,15 @@
           <script>
             
               const schedule = [
-                { date: '2024-10-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTwYqZ2OOG8ToCQ-sQBlvXCAdYC5r72_CK0R-E7DfgJRFA' },
-                { date: '2024-10-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTRWzvFjj-SRL1hr0nx4erhAf_qsXbqiR8NhgjbE1Z6y_M' },
-                { date: '2024-10-11', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ3vpuNus4STq4inOhhsGb1AYA9nYbC1yIod_WJDtNcrbw' },
-                { date: '2024-10-12', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQd1FcFtPWgQbUvP0uaKPHyAT4WCGEwbdlWAYAO9a0y8yM' },
-                { date: '2024-10-13', time: '06:59', url: 'n/a' }                     
+                { date: '2024-10-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQLSf8LTOfrRL2Up6x5NhOhAe1OA_xXoK9uEuTzhnLaMpE' },
+                { date: '2024-10-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQgJJUiwhHsRL-FvUjhRffXAe4bSA9EgR01KnzE9-Gf47g' },
+                { date: '2024-10-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSRuGrfEzodQLey7GIaf_3xAU5fWdhKgxiOkgohnNOtE9s' },
+                { date: '2024-10-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQREr7XwVIE9RbrOgIaUzNgTAQMzoou8rC2v4QcRXLEIlEs' },
+                { date: '2024-10-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRM9_UpAs96S6f3yD3jfltOARVknhGsDgJKdCJnmm8dOcY' },
+                { date: '2024-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRT1D1-mmXZTLWlqSkmUqtMAcDk-z9rPPuXfgX_KdDfqlM' },
+                { date: '2024-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrRXddZIpWR6q9m5OL344uAdmIsB9t7QxY6v8Ez5iaW4I' },
+                { date: '2024-10-21', time: '06:59', url: 'n/a' },
+                { date: '2024-10-22', time: '06:59', url: 'n/a' }                       
               ];      
                    
               ];
