--- a/year8-today.html
+++ b/year8-today.html
@@ -235,7 +235,7 @@ function updateIframeSrc() {
             const day = String(now.getDate()).padStart(2, '0');
             const month = String(now.getMonth() + 1).padStart(2, '0');
             const year = now.getFullYear();
-            const formattedDate = ${day}/${month}/${year};
+            const formattedDate = `${day}/${month}/${year}`;
             document.getElementById('datetime').textContent = formattedDate;
         }
 
