--- a/year8-today.html
+++ b/year8-today.html
@@ -146,7 +146,7 @@
                 { date: '2024-10-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRM9_UpAs96S6f3yD3jfltOARVknhGsDgJKdCJnmm8dOcY' },
                 { date: '2024-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRT1D1-mmXZTLWlqSkmUqtMAcDk-z9rPPuXfgX_KdDfqlM' },
                 { date: '2024-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrRXddZIpWR6q9m5OL344uAdmIsB9t7QxY6v8Ez5iaW4I' },
-                { date: '2024-10-21', time: '06:59', url: 'n/a' },
+                { date: '2024-10-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTMg_XYaipPRLKnpgUILriAAbbvGEqGaEMHlA1_VPNyU_M' },
                 { date: '2024-10-22', time: '06:59', url: 'n/a' }                       
               ];      
       
