--- a/Year7-today.html
+++ b/Year7-today.html
@@ -147,7 +147,7 @@
                 { date: '2024-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSbVwBd12qZTaGLQ92PpM_bAWA_TGyFB1SpQlb8OpLth-s' },
                 { date: '2024-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYh3UXkBmTSJr2UK74LABoAanSTVL_hcvrOiu-L4fNfd8' },
                 { date: '2024-10-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTHkiFmI9LrRqaZqMJz09I_AbjSFY_HGfGVBWYoC7JZkcc' },
-                { date: '2024-10-22', time: '06:59', url: 'n/a' }                     
+                { date: '2024-10-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSHCfrt4eloTZHT1oirDpLzAVjC8WfhFvrDUix2LG7o_sk' }                     
               ];
       
               function updateIframeSrc() {
