--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -147,7 +147,7 @@
                 { date: '2024-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRvsiQSkmIBT6xoltoqiEpRAfFmlE9B1ltTVvqrTHTXBjE' },
                 { date: '2024-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQMPXist8yNTLiWx4_E3FrCAauYIiO3xbQyvfSUtgAIR-c' },
                 { date: '2024-10-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTcB3dMVztrQ6PP2fF48ZNwAe53P16lzVk4Cqvg5v7VSgA' },
-                { date: '2024-10-22', time: '06:59', url: 'n/a' }       
+                { date: '2024-10-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTpq8WWrbnDQpw0rJ4HwtaPAVmVsV7Y8BETMihfOweX6qo' }       
               ];
       
 function updateIframeSrc() {
