--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -147,7 +147,7 @@
                 { date: '2024-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRHw-e9cl9kQJ-3S7avV35UAWQ_guiCpNtAaq1xqgTxX1A' },
                 { date: '2024-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT588b61sBBSoA87mXMgc7bAXNmAERGHNYyhUOdBbeCwXM' },
                 { date: '2024-10-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQHBrkgHZabR7LVYZrQwsjrART72K6bPOV1olqOLcD8f58' },
-                { date: '2024-10-22', time: '06:59', url: 'n/a' }             
+                { date: '2024-10-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQJMrKnN8K0Qp8mRNh49TAAAQvWxL4me_6JkV9dRRcqUbU' }             
               ];
       
 function updateIframeSrc() {
