--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -140,14 +140,14 @@
               // Array of objects with date, time, and corresponding URL
               const schedule = [
                 { date: '2024-10-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTPs3XB7Bu3TatWkzKJXEhEAWo7ot3iZP2SKuebfAbTZDg' },
-                { date: '2024-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS6xhCdN6PYRJObu6bE2iQNAWC6UQR0Sjl5YYKKeNaWRos' },
-                { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTFTpWnOVorSIw3ORwbf49CAds7yu2ENh6ejTMEq5_U0AE' },
-                { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRwk_v6_KOzTLkJceBtzBd7AXH2aklygNyYCmdN2wWlE4A' },
-                { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTjgGK1B1srTbBH3tQIfiMuAc8FwnvIMea-gOKQb5scJ7Q' },
-                { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRvsiQSkmIBT6xoltoqiEpRAfFmlE9B1ltTVvqrTHTXBjE' },
-                { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQMPXist8yNTLiWx4_E3FrCAauYIiO3xbQyvfSUtgAIR-c' },
-                { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTcB3dMVztrQ6PP2fF48ZNwAe53P16lzVk4Cqvg5v7VSgA' },
-                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTpq8WWrbnDQpw0rJ4HwtaPAVmVsV7Y8BETMihfOweX6qo' }       
+                { date: '2024-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT5m7sR57sFQ4lxY8S8sqfvAWl4n2pbfvyaSCcR_EMBRGw' },
+                { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQrGxO0Rx6tTKNyKOMMNjVoAY6bUASIbp-sNLzs4k4u4T8' },
+                { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS_TPM0XidNTL6R63M4XqjHAUwdqwLRZJw3z3z56lR29t8' },
+                { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWfvqSrow2S7x6QbMeSGjVAaKLpC6HitE9dNPoK136vAo' },
+                { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRVCbJ08ZeqQ53LylGhYHDFAbPa3tYxYC3KXtQ14UtQAwk' },
+                { date: '2024-10-29', time: '06:59', url: 'n/a' },
+                { date: '2024-10-30', time: '06:59', url: 'n/a' },
+                { date: '2024-10-31', time: '06:59', url: 'n/a' }       
               ];
       
 function updateIframeSrc() {
