--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,15 +139,15 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-10-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTUX6G1Uee-RIHLPdHbPYFXActrK_ZKm_fL5NYvr_kJFOg' },
-                { date: '2024-10-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTNFIMbDxsGSJoyhZ629yBtAZvmQQqWidMHD0gSHZp5Jl0' },
-                { date: '2024-10-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTvsZxHJgmmSrv_McmIjeEIAfIisWeK45luEpgwt7ZtnY8' },
-                { date: '2024-10-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTeRvxCUyIrTKzrNAhi8CzZAS0tCt5PQ0wfysTXRr-4-C0' },
-                { date: '2024-10-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrfFF5i8LtQZWx6ylxK_LmAQsKqb8ppMv2LCtyDpu1sF4' },
-                { date: '2024-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSbVwBd12qZTaGLQ92PpM_bAWA_TGyFB1SpQlb8OpLth-s' },
-                { date: '2024-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYh3UXkBmTSJr2UK74LABoAanSTVL_hcvrOiu-L4fNfd8' },
-                { date: '2024-10-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTHkiFmI9LrRqaZqMJz09I_AbjSFY_HGfGVBWYoC7JZkcc' },
-                { date: '2024-10-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSHCfrt4eloTZHT1oirDpLzAVjC8WfhFvrDUix2LG7o_sk' }                     
+                { date: '2024-10-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQYcmS4mz0_TLQpWUbs5BN-AZAsX-o8O5IcG3wtZYKCE8A' },
+                { date: '2024-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSLgq5vz-3mRLzz_3sqHFWjAWTiehOYqGBeUtVt5TO_1kc' },
+                { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTfTZfRYfQASK8uhdmEeTzGAQ-DdcYjiIDIans42PlLyOg' },
+                { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQGH1f5SZegSIjx53dkFTstAZX-X8R-Lr-NFNpFa72k2wA' },
+                { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSJSKiSvtFpSK362rlhMAcWAf7wRBnKwz-m3i7Mkk9iq9M' },
+                { date: '2024-10-28', time: '06:59', url: 'n/a' },
+                { date: '2024-10-29', time: '06:59', url: 'n/a' },
+                { date: '2024-10-30', time: '06:59', url: 'n/a' },
+                { date: '2024-10-31', time: '06:59', url: 'n/a' }                       
               ];
       
               function updateIframeSrc() {
