--- a/year8-today.html
+++ b/year8-today.html
@@ -139,15 +139,15 @@
           <script>
             
               const schedule = [
-                { date: '2024-10-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQLSf8LTOfrRL2Up6x5NhOhAe1OA_xXoK9uEuTzhnLaMpE' },
-                { date: '2024-10-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQgJJUiwhHsRL-FvUjhRffXAe4bSA9EgR01KnzE9-Gf47g' },
-                { date: '2024-10-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSRuGrfEzodQLey7GIaf_3xAU5fWdhKgxiOkgohnNOtE9s' },
-                { date: '2024-10-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQREr7XwVIE9RbrOgIaUzNgTAQMzoou8rC2v4QcRXLEIlEs' },
-                { date: '2024-10-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRM9_UpAs96S6f3yD3jfltOARVknhGsDgJKdCJnmm8dOcY' },
-                { date: '2024-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRT1D1-mmXZTLWlqSkmUqtMAcDk-z9rPPuXfgX_KdDfqlM' },
-                { date: '2024-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTrRXddZIpWR6q9m5OL344uAdmIsB9t7QxY6v8Ez5iaW4I' },
-                { date: '2024-10-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTMg_XYaipPRLKnpgUILriAAbbvGEqGaEMHlA1_VPNyU_M' },
-                { date: '2024-10-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTvjljlfYJgR56IpE-WO2ciAVtsjK_cg1JCl74y9ASMvbk' }                       
+                { date: '2024-10-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ2mW2DcB15Qp6QsPoFO8SXAdugbgRsBBYtzdLndfLRNdU' },
+                { date: '2024-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQNm6Orc8oyT4us-oI9uaM8Aa4dG7hNVpaWXDgrbOikJ2E' },
+                { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSXWBHT_aT0QLibd-VhNl60AebdFNp2cPp2cmEhmenDIkU' },
+                { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5zFVUqatiSbgUGaPTRPR9ASKvg8-ywEtX5kI0pTnT708' },
+                { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5hkz8fI3tQbEir-H5tTF7AfbHKfbJS4GgsFUxKOCs9rk' },
+                { date: '2024-10-28', time: '06:59', url: 'n/a' },
+                { date: '2024-10-29', time: '06:59', url: 'n/a' },
+                { date: '2024-10-30', time: '06:59', url: 'n/a' },
+                { date: '2024-10-31', time: '06:59', url: 'n/a' }                      
               ];      
       
 function updateIframeSrc() {
