--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -139,15 +139,15 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [ 
-                { date: '2024-10-14', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSGh1Bqa7nFQ66rZbuQhyOZAQIUf63giakEkwo2r1LiWd0' },
-                { date: '2024-10-15', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQqeDD_PDaeQ52Fe7WK9CwlAXAnaS55rJX2mI9IdYnePAs' },
-                { date: '2024-10-16', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtKlSrK5MWTZLWyuCbN-GvAVCuONVOFdRoT4i8m2hIEfc' },
-                { date: '2024-10-17', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTIEEqDgTXzTKC_iZsyHL40AaeklLijbDEuGXjcD4ri2hA' },
-                { date: '2024-10-18', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQTQHQO5U0iTLeIGhVAXH95AUhQ_5jX90YynhYhjJ5cKlc' },
-                { date: '2024-10-19', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRHw-e9cl9kQJ-3S7avV35UAWQ_guiCpNtAaq1xqgTxX1A' },
-                { date: '2024-10-20', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT588b61sBBSoA87mXMgc7bAXNmAERGHNYyhUOdBbeCwXM' },
-                { date: '2024-10-21', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQHBrkgHZabR7LVYZrQwsjrART72K6bPOV1olqOLcD8f58' },
-                { date: '2024-10-22', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQJMrKnN8K0Qp8mRNh49TAAAQvWxL4me_6JkV9dRRcqUbU' }             
+                { date: '2024-10-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTazd7QlCcfRqC5p5HqtQIIAc3CVOHD7vv2ULp7qB1kMgU' },
+                { date: '2024-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRuZlx_lSQkQK1KBaFL5D9BAa8QoLb0JsRaZ6W5yDbvtzc' },
+                { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ7UBJfEM1gTY_20N7TyfrGAYGYlS7KGJpIfDpor9UsVeg' },
+                { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRXSsAnwAkRQZ4KxHO8xNneAZIr2KhnPSfb3XyZI6C4B8A' },
+                { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5hkz8fI3tQbEir-H5tTF7AfbHKfbJS4GgsFUxKOCs9rk' },
+                { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRL3dA3ZOjyRIQY7sqQR4UUAWRQh3UshC95joFBFrsJK5E' },
+                { date: '2024-10-29', time: '06:59', url: 'n/a' },
+                { date: '2024-10-30', time: '06:59', url: 'n/a' },
+                { date: '2024-10-31', time: '06:59', url: 'n/a' }                  
               ];
       
 function updateIframeSrc() {
