--- a/Year7-today.html
+++ b/Year7-today.html
@@ -144,10 +144,10 @@
                 { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTfTZfRYfQASK8uhdmEeTzGAQ-DdcYjiIDIans42PlLyOg' },
                 { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQGH1f5SZegSIjx53dkFTstAZX-X8R-Lr-NFNpFa72k2wA' },
                 { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSJSKiSvtFpSK362rlhMAcWAf7wRBnKwz-m3i7Mkk9iq9M' },
-                { date: '2024-10-28', time: '06:59', url: 'n/a' },
-                { date: '2024-10-29', time: '06:59', url: 'n/a' },
-                { date: '2024-10-30', time: '06:59', url: 'n/a' },
-                { date: '2024-10-31', time: '06:59', url: 'n/a' }                       
+                { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTaj9FPEwmiQq5CsoTL-aM7AVp5c4AwOIxLNNyHiJvkzVQ' },
+                { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoL1OiG_RXQ41Jpj0k03-OAYpEkiBhNmr3XREZNY6pJBQ' },
+                { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQr9N6lDcFJToi-SkLFEKSZARkuXe89P9Kav7Z1N9DnMOY' },
+                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRT9_zsZrSRToYi_VMyKZ-PARCqkpvmub6XDwmRpCTzVmQ' }                       
               ];
       
               function updateIframeSrc() {
