--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -145,9 +145,9 @@
                 { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS_TPM0XidNTL6R63M4XqjHAUwdqwLRZJw3z3z56lR29t8' },
                 { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWfvqSrow2S7x6QbMeSGjVAaKLpC6HitE9dNPoK136vAo' },
                 { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRVCbJ08ZeqQ53LylGhYHDFAbPa3tYxYC3KXtQ14UtQAwk' },
-                { date: '2024-10-29', time: '06:59', url: 'n/a' },
-                { date: '2024-10-30', time: '06:59', url: 'n/a' },
-                { date: '2024-10-31', time: '06:59', url: 'n/a' }       
+                { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQkHrn-ML8HQ6i6buwKO4e3AZh80b6U8TlgqQHKpcvoiNk' },
+                { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS4zShO4SSsRYavfcvIxK39AVwB98Ku0utEmejv5lbKqZQ' },
+                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRaOfO4v_0KTa-kZsHfgXjDAfmQUPO56x4fRLr7X9MbP6E' }       
               ];
       
 function updateIframeSrc() {
