--- a/year8-today.html
+++ b/year8-today.html
@@ -144,10 +144,10 @@
                 { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSXWBHT_aT0QLibd-VhNl60AebdFNp2cPp2cmEhmenDIkU' },
                 { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5zFVUqatiSbgUGaPTRPR9ASKvg8-ywEtX5kI0pTnT708' },
                 { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5hkz8fI3tQbEir-H5tTF7AfbHKfbJS4GgsFUxKOCs9rk' },
-                { date: '2024-10-28', time: '06:59', url: 'n/a' },
-                { date: '2024-10-29', time: '06:59', url: 'n/a' },
-                { date: '2024-10-30', time: '06:59', url: 'n/a' },
-                { date: '2024-10-31', time: '06:59', url: 'n/a' }                      
+                { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRVSUtdk4jKSbbzl5Og_5VSARXTOAvUTH_2_uEd6OADZl0' },
+                { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ-BTMI7QssRYUS00KBRTJbAbez2yhqqZaXV-HIxBgMTAk' },
+                { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRMugGnPxjnSJWbJPxaB5gCAUar2GODrvkAMLaK5KzhZhA' },
+                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQShwP4KtRa2T4RcI0i3Cq_IAcRhAsiBpyC9yz8BJf9dswY' }                      
               ];      
       
 function updateIframeSrc() {
