--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -145,9 +145,9 @@
                 { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRXSsAnwAkRQZ4KxHO8xNneAZIr2KhnPSfb3XyZI6C4B8A' },
                 { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS5hkz8fI3tQbEir-H5tTF7AfbHKfbJS4GgsFUxKOCs9rk' },
                 { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRL3dA3ZOjyRIQY7sqQR4UUAWRQh3UshC95joFBFrsJK5E' },
-                { date: '2024-10-29', time: '06:59', url: 'n/a' },
-                { date: '2024-10-30', time: '06:59', url: 'n/a' },
-                { date: '2024-10-31', time: '06:59', url: 'n/a' }                  
+                { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYM8ybTfCAQ59NGlfOETRXAe-Qu7eCYDiy-gndx1kPV2k' },
+                { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQsEm2szDPqQ4vzFPoOZEGAAaRN_4JTFjONXyq0XtcoJV4' },
+                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRZnOquCUfvT6HCeoct4wTjASI7lnb8ZTw9NV1C6ADkWKY' }                  
               ];
       
 function updateIframeSrc() {
