--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -147,7 +147,11 @@
                 { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRVCbJ08ZeqQ53LylGhYHDFAbPa3tYxYC3KXtQ14UtQAwk' },
                 { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQkHrn-ML8HQ6i6buwKO4e3AZh80b6U8TlgqQHKpcvoiNk' },
                 { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS4zShO4SSsRYavfcvIxK39AVwB98Ku0utEmejv5lbKqZQ' },
-                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRaOfO4v_0KTa-kZsHfgXjDAfmQUPO56x4fRLr7X9MbP6E' }       
+                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRaOfO4v_0KTa-kZsHfgXjDAfmQUPO56x4fRLr7X9MbP6E' },
+                { date: '2024-11-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRIZvugsMISSpUvMFDqxXJEAZb0_cw7M4WDMsc6qILWEis' },
+                { date: '2024-11-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTaz_pFC5SHR7MTmWzT6OQcAUJ5pL1QsYytSq8x1BJ-_8s' },
+                { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQf0aCybUqvQZfvXIFD0BCUAWBfqBbXyrCuVl8gENA1g_A' },
+                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTqMGHESB8CSb4IA5gAxwnCAbE2M12y7F4fA6D8n2D6uHY' }      
               ];
       
 function updateIframeSrc() {
