--- a/Year7-today.html
+++ b/Year7-today.html
@@ -149,8 +149,8 @@
                 { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQr9N6lDcFJToi-SkLFEKSZARkuXe89P9Kav7Z1N9DnMOY' },
                 { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRT9_zsZrSRToYi_VMyKZ-PARCqkpvmub6XDwmRpCTzVmQ' },
                 { date: '2024-11-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTThWatY3ZCSKS1OSOgSf4HAWlFEy4Ru-RKEwskbNkvlUc' },
-                { date: '2024-11-02', time: '06:59', url: 'hhttps://1drv.ms/p/c/8dd37d65e185b290/IQRCIGp-VcQOSJwTImwfzzGQAbqGzI50cx2YfVKN5FOpUfA' },
-                { date: '2024-11-03', time: '06:59', url: 'hhttps://1drv.ms/p/c/8dd37d65e185b290/IQTmbD0yJAXHTYndI1GR7OGgAX7FISUrXDfX1i73tmyruvk' },
+                { date: '2024-11-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRCIGp-VcQOSJwTImwfzzGQAbqGzI50cx2YfVKN5FOpUfA' },
+                { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTmbD0yJAXHTYndI1GR7OGgAX7FISUrXDfX1i73tmyruvk' },
                 { date: '2024-11-04', time: '06:59', url: 'n/a' }                       
               ];
       
