--- a/year8-today.html
+++ b/year8-today.html
@@ -147,7 +147,11 @@
                 { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRVSUtdk4jKSbbzl5Og_5VSARXTOAvUTH_2_uEd6OADZl0' },
                 { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ-BTMI7QssRYUS00KBRTJbAbez2yhqqZaXV-HIxBgMTAk' },
                 { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRMugGnPxjnSJWbJPxaB5gCAUar2GODrvkAMLaK5KzhZhA' },
-                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQShwP4KtRa2T4RcI0i3Cq_IAcRhAsiBpyC9yz8BJf9dswY' }                      
+                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQShwP4KtRa2T4RcI0i3Cq_IAcRhAsiBpyC9yz8BJf9dswY' },
+                { date: '2024-11-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSwzHojtz6KTa76pI9nn6TFAVutH0YzE45pKwbiQQNCF_E' },
+                { date: '2024-11-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTAgMMABAG0TIrvTKKSy87aAQIpqgEMYO4AwenJUFIVnQo' },
+                { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT9_6ZfJ2MESo-9W6Cwi9n6Af0gWBx2HyJw2kw-Ptz3-Pc' },
+                { date: '2024-11-04', time: '06:59', url: 'n/a' }                         
               ];      
       
 function updateIframeSrc() {
