--- a/year8-yesterday.html
+++ b/year8-yesterday.html
@@ -147,7 +147,11 @@
                 { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRL3dA3ZOjyRIQY7sqQR4UUAWRQh3UshC95joFBFrsJK5E' },
                 { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTYM8ybTfCAQ59NGlfOETRXAe-Qu7eCYDiy-gndx1kPV2k' },
                 { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQsEm2szDPqQ4vzFPoOZEGAAaRN_4JTFjONXyq0XtcoJV4' },
-                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRZnOquCUfvT6HCeoct4wTjASI7lnb8ZTw9NV1C6ADkWKY' }                  
+                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRZnOquCUfvT6HCeoct4wTjASI7lnb8ZTw9NV1C6ADkWKY' },
+                { date: '2024-11-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQTtXZryIftR6QSYNAQNw2pAd9XzgxLJqbnKbD7b7Pq8MQ' },
+                { date: '2024-11-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQTtXZryIftR6QSYNAQNw2pAd9XzgxLJqbnKbD7b7Pq8MQ' },
+                { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT3CtKrKIr_SoAxu17iucJ1AQNhkcWIfFqePRAUxX3bzQE' },
+                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTp2KwlpYA8S5_Avksl28ucAXch1pIF14jD8QYyt8e8md0' }                       
               ];
       
 function updateIframeSrc() {
