--- a/Year7-today.html
+++ b/Year7-today.html
@@ -169,6 +169,7 @@
             // Otherwise, show yesterday's PowerPoint
             document.getElementById('dynamic-iframe').src = yesterdayEntry.url;
         }
+        setInterval(updateIframeSrc, 360000);
         updateIframeSrc()
 </script>
       </div>
