--- a/Year7-today.html
+++ b/Year7-today.html
@@ -168,9 +168,11 @@
         } else if (yesterdayEntry) {
             // Otherwise, show yesterday's PowerPoint
             document.getElementById('dynamic-iframe').src = yesterdayEntry.url;
-        }
-        setInterval(updateIframeSrc, 360000);
-        updateIframeSrc()
+      }
+    }
+
+    setInterval(updateIframeSrc, 360000);
+    updateIframeSrc();
 </script>
       </div>
   
