--- a/Year7-today.html
+++ b/Year7-today.html
@@ -139,19 +139,19 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-10-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQYcmS4mz0_TLQpWUbs5BN-AZAsX-o8O5IcG3wtZYKCE8A' },
-                { date: '2024-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSLgq5vz-3mRLzz_3sqHFWjAWTiehOYqGBeUtVt5TO_1kc' },
-                { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTfTZfRYfQASK8uhdmEeTzGAQ-DdcYjiIDIans42PlLyOg' },
-                { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQGH1f5SZegSIjx53dkFTstAZX-X8R-Lr-NFNpFa72k2wA' },
-                { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSJSKiSvtFpSK362rlhMAcWAf7wRBnKwz-m3i7Mkk9iq9M' },
-                { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTaj9FPEwmiQq5CsoTL-aM7AVp5c4AwOIxLNNyHiJvkzVQ' },
-                { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSoL1OiG_RXQ41Jpj0k03-OAYpEkiBhNmr3XREZNY6pJBQ' },
-                { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQr9N6lDcFJToi-SkLFEKSZARkuXe89P9Kav7Z1N9DnMOY' },
-                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRT9_zsZrSRToYi_VMyKZ-PARCqkpvmub6XDwmRpCTzVmQ' },
-                { date: '2024-11-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTThWatY3ZCSKS1OSOgSf4HAWlFEy4Ru-RKEwskbNkvlUc' },
-                { date: '2024-11-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRCIGp-VcQOSJwTImwfzzGQAbqGzI50cx2YfVKN5FOpUfA' },
                 { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTmbD0yJAXHTYndI1GR7OGgAX7FISUrXDfX1i73tmyruvk' },
-                { date: '2024-11-04', time: '06:59', url: 'n/a' }                       
+                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQaPv5wZ3UBT6q4Bvq9hO86AbR-jMAIK_6oVH6nC3IGUg4' },
+                { date: '2024-11-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQR_78GKR6UmR4WPGLAlSBunARx3HYWPWEJBnInb2wPnCdc' },
+                { date: '2024-11-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQ1jRzQwCUQQoISOgBrjgnyAQFKXxDsrSEQ5pZCmqxO9PE' },
+                { date: '2024-11-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQqXXtNQPMGQpmUZWzIcNlSAWpRbGfMzb77ZjWi6vyztoc' },
+                { date: '2024-11-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRMW4obs8tSTYdD5f8L-Zo-AcuOD7IeujOOpGbKtG4nG38' },
+                { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtv6WEuvqrSbekVgz06MDHAS9vBG9WtXvBCsJ98Ai1mAU' },
+                { date: '2024-11-10', time: '06:59', url: 'n/a' },
+                { date: '2024-11-11', time: '06:59', url: 'n/a' },
+                { date: '2024-11-12', time: '06:59', url: 'n/a' },
+                { date: '2024-11-13', time: '06:59', url: 'n/a' },
+                { date: '2024-11-14', time: '06:59', url: 'n/a' },
+                { date: '2024-11-15', time: '06:59', url: 'n/a' }                       
               ];
       
               function updateIframeSrc() {
