--- a/year7-yesterday.html
+++ b/year7-yesterday.html
@@ -139,19 +139,19 @@
           <script>
               // Array of objects with date, time, and corresponding URL
               const schedule = [
-                { date: '2024-10-23', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTPs3XB7Bu3TatWkzKJXEhEAWo7ot3iZP2SKuebfAbTZDg' },
-                { date: '2024-10-24', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT5m7sR57sFQ4lxY8S8sqfvAWl4n2pbfvyaSCcR_EMBRGw' },
-                { date: '2024-10-25', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQrGxO0Rx6tTKNyKOMMNjVoAY6bUASIbp-sNLzs4k4u4T8' },
-                { date: '2024-10-26', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS_TPM0XidNTL6R63M4XqjHAUwdqwLRZJw3z3z56lR29t8' },
-                { date: '2024-10-27', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTWfvqSrow2S7x6QbMeSGjVAaKLpC6HitE9dNPoK136vAo' },
-                { date: '2024-10-28', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRVCbJ08ZeqQ53LylGhYHDFAbPa3tYxYC3KXtQ14UtQAwk' },
-                { date: '2024-10-29', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQkHrn-ML8HQ6i6buwKO4e3AZh80b6U8TlgqQHKpcvoiNk' },
-                { date: '2024-10-30', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQS4zShO4SSsRYavfcvIxK39AVwB98Ku0utEmejv5lbKqZQ' },
-                { date: '2024-10-31', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRaOfO4v_0KTa-kZsHfgXjDAfmQUPO56x4fRLr7X9MbP6E' },
-                { date: '2024-11-01', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRIZvugsMISSpUvMFDqxXJEAZb0_cw7M4WDMsc6qILWEis' },
-                { date: '2024-11-02', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTaz_pFC5SHR7MTmWzT6OQcAUJ5pL1QsYytSq8x1BJ-_8s' },
                 { date: '2024-11-03', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQf0aCybUqvQZfvXIFD0BCUAWBfqBbXyrCuVl8gENA1g_A' },
-                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTqMGHESB8CSb4IA5gAxwnCAbE2M12y7F4fA6D8n2D6uHY' }      
+                { date: '2024-11-04', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQTaXY9njD8oQ5C0c1ydwubeATNEAzO2jTIXeXhkbVh_PgQ' },
+                { date: '2024-11-05', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQW_lIUvaE2T6IjAxVJhsuWAY9hA-qaW2MqKI4k1gswdrw' },
+                { date: '2024-11-06', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQSfGpblV05HQKi5ryuXxGVzAWTj0EWvidZD6Yn5OBBbO0A' },
+                { date: '2024-11-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRq4oz70MPDSbkEc9IoVhPxAfNS9eh-AvYwy4pRvgB_iyU' },
+                { date: '2024-11-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQT_OpUyoRirR6Wdcf2K2bCmAZD42nHbT0AoBU8Ozs3Bloc' },
+                { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQz1gU011F4QqoU8bfHqLuaAUoQZSpEcEtKCbNcdTPep6o' },
+                { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRxUxG74lBAR6DOQPn6Tq5sAQW2lzxa-qd2cnFTSsIAy7U' },
+                { date: '2024-11-11', time: '06:59', url: 'n/a' },
+                { date: '2024-11-12', time: '06:59', url: 'n/a' },
+                { date: '2024-11-13', time: '06:59', url: 'n/a' },
+                { date: '2024-11-14', time: '06:59', url: 'n/a' },
+                { date: '2024-11-15', time: '06:59', url: 'n/a' }         
               ];
       
 function updateIframeSrc() {
