--- a/Year7-today.html
+++ b/Year7-today.html
@@ -146,7 +146,7 @@
                 { date: '2024-11-07', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQqXXtNQPMGQpmUZWzIcNlSAWpRbGfMzb77ZjWi6vyztoc' },
                 { date: '2024-11-08', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRMW4obs8tSTYdD5f8L-Zo-AcuOD7IeujOOpGbKtG4nG38' },
                 { date: '2024-11-09', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQRtv6WEuvqrSbekVgz06MDHAS9vBG9WtXvBCsJ98Ai1mAU' },
-                { date: '2024-11-10', time: '06:59', url: 'n/a' },
+                { date: '2024-11-10', time: '06:59', url: 'https://1drv.ms/p/c/8dd37d65e185b290/IQQYGUxTTa7ZSoreKF41tEAcAWZKzdv6MCh8T8Y_tU1e2wU' },
                 { date: '2024-11-11', time: '06:59', url: 'n/a' },
                 { date: '2024-11-12', time: '06:59', url: 'n/a' },
                 { date: '2024-11-13', time: '06:59', url: 'n/a' },
